BUG: pot temperature not centered in chrome

--- a/brew-server/WebContent/theme/status.css
+++ b/brew-server/WebContent/theme/status.css
@@ -5,15 +5,14 @@ img.statusIcon {
 
 .potImage { 
    position: relative; 
-   width: 100%; /* for IE 6 */
+	text-align: center;
 }
 
-.potTemp { 
-   position: absolute; 
-   top: 9em; 
-   left: 0.5em;
-   width: 100%; 
-}
+.potImage img { 
+   	position: absolute; 
+	top: -100px;
+	left: 0;
+ }
  
 .status {
  	padding:0.5em 2em 1em 2em;
